# 2dAnimation

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json
include/: AnimatedEntity.h  Display.h  DrawUtilities.h  MoveUtilities.h  Snake.h
src/: AnimatedEntity.cpp  Display.cpp  Snake.cpp
